k8s/echo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  creationTimestamp: null
  labels:
    app: echo
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echo
    spec:
      containers:
        - image: melalex/echo
          name: echo
          resources: {}
status: {}
