k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: echo-mongo
  name: echo-mongo
spec:
  selector:
    matchLabels:
      app: echo-mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: echo-mongo
    spec:
      containers:
        # by default, the image is pulled from docker hub
        - image: mongo:latest
          name: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: echo-mongo-pv-claim
