k8s/echo-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  creationTimestamp: null
  labels:
    app: echo
  name: echo
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: echo
  type: NodePort
status:
  loadBalancer: {}
