k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: echo-mongo-cluster-ip-service
spec:
  ports:
    # service port in cluster
    - port: 27017
      # port to contact inside container
      targetPort: 27017
  selector:
    app: echo-mongo
  type: ClusterIP
